<resources>
    <string name="app_name">Dictionary</string>
    <string name="words_factory">WordsFactory</string>

    <!-- Onboarding screens -->
    <string name="onboarding_skip">Skip</string>
    <string name="onboarding_next">Next</string>
    <string name="onboarding_continue">Let’s Start</string>
    <string name="onboarding_learn_title">Learn anytime\nand anywhere</string>
    <string name="onboarding_subtitle">Quarantine is the perfect time to spend your\nday learning something new, from anywhere!</string>
    <string name="onboarding_find_course_title">Find a course\nfor you</string>
    <string name="onboarding_improve_skills_title">Improve your skills</string>

    <!-- Signup screen -->
    <string name="signupgirl">SignUpGirl</string>
    <string name="signup">Sign up</string>
    <string name="createYourAccount">Create your account</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="signupbackbutton">signupBackButton</string>

    <!-- Navigation Bar Screen-->
    <string name="training">Training</string>
    <string name="dictionary">Dictionary</string>
    <string name="video">Video</string>
    <string name="add_to_dictionary">Add to Dictionary</string>
    <string name="hint_search">Search</string>
    <string name="cooking">Cooking</string>
    <string name="part_of_speech">Part of Speech:</string>
    <string name="meanings">Meanings:</string>
    <string name="transcriptionEdit">[ˈkʊkɪŋ]</string>
    <string name="partOfSpeechEdit">Noun</string>
    <string name="ic_speaker">speaker</string>
    <string name="meaning">The practice or skill of preparing food by combining, mixing, and heating ingredients.</string>
    <string name="example">Example: he developed an interest in cooking.</string>

    <string name="video_zone_url">https://learnenglish.britishcouncil.org/general-english/video-zone</string>
</resources>