<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DictionaryFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        app:endIconDrawable="@drawable/ic_search"
        app:endIconMode="custom"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_text_background"
            android:fontFamily="@font/rubik"
            android:textSize="14sp"
            android:maxLines="1"
            android:inputType="text"
            android:hint="@string/hint_search" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/wordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/cooking"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:fontFamily="@font/rubik_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchWord" />

    <TextView
        android:id="@+id/transcriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/transcriptionEdit"
        android:textColor="@color/button"
        android:textSize="14sp"
        android:fontFamily="@font/rubik"
        app:layout_constraintStart_toEndOf="@+id/wordText"
        app:layout_constraintBaseline_toBaselineOf="@id/wordText" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_speaker"
        android:baselineAlignBottom="true"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@+id/transcriptionText"
        app:layout_constraintBaseline_toBaselineOf="@id/wordText"
        android:contentDescription="@string/ic_speaker" />
    <TextView
        android:id="@+id/partOfSpeechText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        android:text="@string/part_of_speech"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/rubik_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wordText" />

    <TextView
        android:id="@+id/nounText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/partOfSpeechEdit"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:fontFamily="@font/rubik"
        app:layout_constraintStart_toEndOf="@+id/partOfSpeechText"
        app:layout_constraintBaseline_toBaselineOf="@id/partOfSpeechText" />

    <TextView
        android:id="@+id/meanings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        android:text="@string/meanings"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/rubik_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/partOfSpeechText" />

    <LinearLayout
        android:id="@+id/firstLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:background="@drawable/input_text_background"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meanings">

        <TextView
            android:id="@+id/meaning_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/meaning"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/rubik"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/example_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/example"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/rubik"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:background="@drawable/input_text_background"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstLayout">

        <TextView
            android:id="@+id/meaning_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/meaning"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/rubik"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/example_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/example"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/rubik"
            android:layout_weight="1"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
