<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupScreen">

    <ImageView
        android:id="@+id/ic_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_marginTop="64dp"
        android:src="@drawable/ic_signup"
        android:contentDescription="@string/signupgirl"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/textSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/signup"
        android:textColor="@color/text_primary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_signup" />

    <TextView
        android:id="@+id/textCreate"
        android:fontFamily="@font/rubik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/createYourAccount"
        android:textColor="@color/text_secondary"
        android:textSize="14sp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="4sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textSignup" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_text_background"
            android:fontFamily="@font/rubik"
            android:textSize="14sp"
            android:maxLines="1"
            android:inputType="text"
            android:hint="@string/name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_text_background"
            android:fontFamily="@font/rubik"
            android:textSize="14sp"
            android:maxLines="1"
            android:inputType="text"
            android:hint="@string/e_mail" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:passwordToggleEnabled="true"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/signupButton">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_text_background"
            android:fontFamily="@font/rubik"
            android:textSize="14sp"
            android:maxLines="1"
            android:inputType="textPassword"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingVertical="16dp"
        android:text="@string/signup"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="16dp"
        app:fontFamily="@font/rubik_medium"
        app:backgroundTint="@color/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textLogin"/>

    <TextView
        android:id="@+id/textLogin"
        android:fontFamily="@font/rubik_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="54dp"
        android:text="@string/log_in"
        android:textColor="@color/text_secondary"
        android:textSize="14sp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="4sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/icBack"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_back_button"
        android:contentDescription="@string/signupbackbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
